--- a/style.css
+++ b/style.css
@@ -7,4 +7,72 @@ header {
     text-align: center;
 }
 
+.main_box {
+    clear: both;
+}
+
+#container_1 {
+    float: left;
+    padding: 20px;
+    margin-right: 20px;
+}
+
+#container_2 {
+    float: right;
+    padding: 20px;
+    margin-left: 20px;
+}
+
+img {
+    height: 600px;
+    width: auto;
+}
+h3 {
+    text-align: center;
+    font-size: 80%;
+    padding: 20px;
+}
+
+h2 {
+    clear: both;
+    padding: 20px;
+    text-align: center;
+}
+
+p {
+    padding: 20px;
+}
+
+section {
+    clear: both;
+}
+
+.center {
+    text-align: center;
+}
+
+.padding {
+    padding-top: 11%;
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+iframe {
+    margin-left: auto;
+    margin-right: auto;
+    width: 560px; 
+    height: 315px; 
+    padding: 20px;
+}
+
+#container_3 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 560px;
+}
+
+
 
